gen/LenguajeParser.java
// Generated from C:/Users/de/Interprete/grammar\Lenguaje.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LenguajeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, TK_ASIGNACION=38, 
		TK_COMA=39, TK_CORCHETE_DERECHO=40, TK_CORCHETE_IZQUIERDO=41, TK_DISTINTO_DE=42, 
		TK_DIVISION=43, TK_DOS_PUNTOS=44, TK_IGUAL_QUE=45, TK_LLAVE_DERECHA=46, 
		TK_LLAVE_IZQUIERDA=47, TK_MAYOR=48, TK_MAYOR_igual=49, TK_MENOR=50, TK_MENOR_IGUAL=51, 
		TK_MODULO=52, TK_MULTIPLICACION=53, TK_PARENTESIS_DERECHO=54, TK_PARENTESIS_IZQUIERDO=55, 
		TK_POTENCIACION=56, TK_PUNTO=57, TK_PUNTO_y_coma=58, TK_RESTA=59, TK_SUMA=60, 
		COMMENT=61, LINE_COMMENT=62, ID=63, TK_NUMERO=64, TK_CADENA=65, ESP=66;
	public static final int
		RULE_inicio = 0, RULE_inicio2 = 1, RULE_prog = 2, RULE_especificacion = 3, 
		RULE_var = 4, RULE_const = 5, RULE_const2 = 6, RULE_rmt = 7, RULE_vector = 8, 
		RULE_matriz = 9, RULE_matriz2 = 10, RULE_tipodato = 11, RULE_registro = 12, 
		RULE_tipos = 13, RULE_pc = 14, RULE_sentencias = 15, RULE_si = 16, RULE_idsentencia = 17, 
		RULE_int = 18, RULE_leer = 19, RULE_leer2 = 20, RULE_leer3 = 21, RULE_imprimir = 22, 
		RULE_imprimir2 = 23, RULE_asigid = 24, RULE_expre = 25, RULE_llaves = 26, 
		RULE_logic = 27, RULE_lista = 28, RULE_lista3 = 29, RULE_lista2 = 30, 
		RULE_expre2 = 31, RULE_expre3 = 32, RULE_oper = 33, RULE_else = 34, RULE_sielse = 35, 
		RULE_caso = 36, RULE_and = 37, RULE_incremento = 38, RULE_negativo = 39, 
		RULE_argumentos = 40, RULE_argumentos2 = 41, RULE_subrutinas = 42, RULE_ref = 43, 
		RULE_expreSUB = 44, RULE_expreSUB2 = 45, RULE_valoref = 46, RULE_refSUB = 47, 
		RULE_idV = 48, RULE_idV2 = 49, RULE_vectordef = 50, RULE_funciones = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "inicio2", "prog", "especificacion", "var", "const", "const2", 
			"rmt", "vector", "matriz", "matriz2", "tipodato", "registro", "tipos", 
			"pc", "sentencias", "si", "idsentencia", "int", "leer", "leer2", "leer3", 
			"imprimir", "imprimir2", "asigid", "expre", "llaves", "logic", "lista", 
			"lista3", "lista2", "expre2", "expre3", "oper", "else", "sielse", "caso", 
			"and", "incremento", "negativo", "argumentos", "argumentos2", "subrutinas", 
			"ref", "expreSUB", "expreSUB2", "valoref", "refSUB", "idV", "idV2", "vectordef", 
			"funciones"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'inicio'", "'fin'", "'programa'", "'var'", "'const'", "'tipos'", 
			"'TRUE'", "'FALSE'", "'SI'", "'NO'", "'vector'", "'matriz'", "'registro'", 
			"'numerico'", "'cadena'", "'logico'", "'mientras'", "'repetir'", "'hasta'", 
			"'eval'", "'sino'", "'desde'", "'imprimir'", "'leer'", "'dim'", "'cls'", 
			"'si'", "'int'", "'or'", "'and'", "'not'", "'caso'", "'paso'", "'subrutina'", 
			"'ref'", "'retorna'", "'ascii'", "'='", "','", "']'", "'['", "'<>'", 
			"'/'", "':'", "'=='", "'}'", "'{'", "'>'", "'>='", "'<'", "'<='", "'%'", 
			"'*'", "')'", "'('", "'^'", "'.'", "';'", "'-'", "'+'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "TK_ASIGNACION", "TK_COMA", "TK_CORCHETE_DERECHO", "TK_CORCHETE_IZQUIERDO", 
			"TK_DISTINTO_DE", "TK_DIVISION", "TK_DOS_PUNTOS", "TK_IGUAL_QUE", "TK_LLAVE_DERECHA", 
			"TK_LLAVE_IZQUIERDA", "TK_MAYOR", "TK_MAYOR_igual", "TK_MENOR", "TK_MENOR_IGUAL", 
			"TK_MODULO", "TK_MULTIPLICACION", "TK_PARENTESIS_DERECHO", "TK_PARENTESIS_IZQUIERDO", 
			"TK_POTENCIACION", "TK_PUNTO", "TK_PUNTO_y_coma", "TK_RESTA", "TK_SUMA", 
			"COMMENT", "LINE_COMMENT", "ID", "TK_NUMERO", "TK_CADENA", "ESP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lenguaje.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LenguajeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InicioContext extends ParserRuleContext {
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public EspecificacionContext especificacion() {
			return getRuleContext(EspecificacionContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public SubrutinasContext subrutinas() {
			return getRuleContext(SubrutinasContext.class,0);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).exitInicio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeVisitor ) return ((LenguajeVisitor<? extends T>)visitor).visitInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			prog();
			setState(105);
			especificacion();
			setState(106);
			match(T__0);
			setState(107);
			sentencias();
			setState(108);
			match(T__1);
			setState(109);
			subrutinas();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Inicio2Context extends ParserRuleContext {
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public EspecificacionContext especificacion() {
			return getRuleContext(EspecificacionContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public Inicio2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).enterInicio2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).exitInicio2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeVisitor ) return ((LenguajeVisitor<? extends T>)visitor).visitInicio2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Inicio2Context inicio2() throws RecognitionException {
		Inicio2Context _localctx = new Inicio2Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_inicio2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			prog();
			setState(112);
			especificacion();
			setState(113);
			match(T__0);
			setState(114);
			sentencias();
			setState(115);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LenguajeParser.ID, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeVisitor ) return ((LenguajeVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_prog);
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				match(T__2);
				setState(118);
				match(ID);
				}
				break;
			case T__0:
			case T__3:
			case T__4:
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EspecificacionContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public EspecificacionContext especificacion() {
			return getRuleContext(EspecificacionContext.class,0);
		}
		public ConstContext const_() {
			return getRuleContext(ConstContext.class,0);
		}
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public EspecificacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_especificacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).enterEspecificacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).exitEspecificacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeVisitor ) return ((LenguajeVisitor<? extends T>)visitor).visitEspecificacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EspecificacionContext especificacion() throws RecognitionException {
		EspecificacionContext _localctx = new EspecificacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_especificacion);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				match(T__3);
				setState(123);
				var();
				setState(124);
				especificacion();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				match(T__4);
				setState(127);
				const_();
				setState(128);
				especificacion();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				match(T__5);
				setState(131);
				tipos();
				setState(132);
				especificacion();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 4);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(LenguajeParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LenguajeParser.ID, i);
		}
		public TerminalNode TK_DOS_PUNTOS() { return getToken(LenguajeParser.TK_DOS_PUNTOS, 0); }
		public RmtContext rmt() {
			return getRuleContext(RmtContext.class,0);
		}
		public PcContext pc() {
			return getRuleContext(PcContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public List<TerminalNode> TK_COMA() { return getTokens(LenguajeParser.TK_COMA); }
		public TerminalNode TK_COMA(int i) {
			return getToken(LenguajeParser.TK_COMA, i);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeVisitor ) return ((LenguajeVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var);
		int _la;
		try {
			setState(151);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				match(ID);
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TK_COMA) {
					{
					{
					setState(138);
					match(TK_COMA);
					setState(139);
					match(ID);
					}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(145);
				match(TK_DOS_PUNTOS);
				setState(146);
				rmt();
				setState(147);
				pc();
				setState(148);
				var();
				}
				break;
			case T__0:
			case T__3:
			case T__4:
			case T__5:
			case TK_LLAVE_DERECHA:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LenguajeParser.ID, 0); }
		public TerminalNode TK_ASIGNACION() { return getToken(LenguajeParser.TK_ASIGNACION, 0); }
		public Const2Context const2() {
			return getRuleContext(Const2Context.class,0);
		}
		public PcContext pc() {
			return getRuleContext(PcContext.class,0);
		}
		public ConstContext const_() {
			return getRuleContext(ConstContext.class,0);
		}
		public ConstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).enterConst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).exitConst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeVisitor ) return ((LenguajeVisitor<? extends T>)visitor).visitConst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstContext const_() throws RecognitionException {
		ConstContext _localctx = new ConstContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_const);
		try {
			setState(160);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				match(ID);
				setState(154);
				match(TK_ASIGNACION);
				setState(155);
				const2();
				setState(156);
				pc();
				setState(157);
				const_();
				}
				break;
			case T__0:
			case T__3:
			case T__4:
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Const2Context extends ParserRuleContext {
		public TerminalNode TK_NUMERO() { return getToken(LenguajeParser.TK_NUMERO, 0); }
		public TerminalNode TK_CADENA() { return getToken(LenguajeParser.TK_CADENA, 0); }
		public Const2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).enterConst2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).exitConst2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeVisitor ) return ((LenguajeVisitor<? extends T>)visitor).visitConst2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Const2Context const2() throws RecognitionException {
		Const2Context _localctx = new Const2Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_const2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_la = _input.LA(1);
			if ( !(((((_la - 7)) & ~0x3f) == 0 && ((1L << (_la - 7)) & ((1L << (T__6 - 7)) | (1L << (T__7 - 7)) | (1L << (T__8 - 7)) | (1L << (T__9 - 7)) | (1L << (TK_NUMERO - 7)) | (1L << (TK_CADENA - 7)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RmtContext extends ParserRuleContext {
		public TipodatoContext tipodato() {
			return getRuleContext(TipodatoContext.class,0);
		}
		public TerminalNode TK_CORCHETE_IZQUIERDO() { return getToken(LenguajeParser.TK_CORCHETE_IZQUIERDO, 0); }
		public VectorContext vector() {
			return getRuleContext(VectorContext.class,0);
		}
		public TerminalNode TK_CORCHETE_DERECHO() { return getToken(LenguajeParser.TK_CORCHETE_DERECHO, 0); }
		public MatrizContext matriz() {
			return getRuleContext(MatrizContext.class,0);
		}
		public RegistroContext registro() {
			return getRuleContext(RegistroContext.class,0);
		}
		public RmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).enterRmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeListener ) ((LenguajeListener)listener).exitRmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeVisitor ) return ((LenguajeVisitor<? extends T>)visitor).visitRmt(this);
			else return visitor.visitChildren(this);
		}
	}
